--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<!-- This is a spicy comment! -->
+<html lang="en">
+    <head>
+        <title>My Spicy HTML Page</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="company.css" />
+        <link rel="stylesheet" type="text/css" href="engineering-department.css" />
+        <link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+        <link rel="stylesheet" type="text/css" href="typography.css" />
+    </head>
+    <body>
+        <h1>My Spicy Header</h1>
+        <h3> This is my body </h3>
+    </body>
+    
+</html>
